[gd_scene load_steps=3 format=3 uid="uid://cpbacnqtb4bi1"]

[ext_resource type="PackedScene" uid="uid://c8gveeihjsc3n" path="res://scenes/collectibles/beta_big_coin/collectible_beta_big_coin.tscn" id="1_7uvip"]
[ext_resource type="Script" uid="uid://b24lthyqe7gih" path="res://scenes/levels/level_02/level_02.gd" id="1_e78mx"]

[node name="Level02" type="Node2D"]
script = ExtResource("1_e78mx")

[node name="TileMapLayer" type="TileMapLayer" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[node name="CollectibleBase" parent="Items" instance=ExtResource("1_7uvip")]

[node name="CollectibleBase2" parent="Items" instance=ExtResource("1_7uvip")]

[node name="CollectibleBase3" parent="Items" instance=ExtResource("1_7uvip")]

[node name="PlayerSpawn" type="Marker2D" parent="."]

[connection signal="collected" from="Items/CollectibleBase" to="." method="_on_collectible_base_collected"]
[connection signal="collected" from="Items/CollectibleBase2" to="." method="_on_collectible_base_2_collected"]
[connection signal="collected" from="Items/CollectibleBase3" to="." method="_on_collectible_base_3_collected"]
